[package]
name = "c1_rpc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-native-tls"] }
tokio = "1.32.0"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
anyhow = "1.0.50"
